--- a/index.html
+++ b/index.html
@@ -108,6 +108,112 @@
 
     </div>
 
+    <!--Books-->
+    <!-- Featured books -->
+    <!-- <div  class="featured-book">
+        <h1>Featured books</h1>
+        <div class="Featured-book-box">
+            <div class="featured-book-card1">
+                <div class="featured-book-image">
+
+                </div>
+                <div class="featured-book-tag">
+
+                </div>
+            </div>
+        </div>
+    </div> -->
+
+  <!--reviews-->
+
+  <div class="reviews">
+    <h1>Reviews</h1>
+
+    <div class="review_box">
+
+        <div class="review_card">
+            <i class="quotation">❞</i>
+            <div class="card_top">
+                <img src="Images/review1.jpeg">
+            </div>
+            <div class="card">
+                <h2>John Doe</h2>
+                <p>
+                    Amazing website!!!!
+                </p>
+                <div class="review_icon">
+                    <i class="star">★</i>
+                    <i class="star">★</i>
+                    <i class="star">★</i>
+                    <i class="star">★</i>
+                    <i class="emptystar">☆</i>
+                </div>
+            </div>
+        </div>
+
+        <div class="review_card">
+            <i class="quotation">❞</i>
+            <div class="card_top">
+                <img src="Images/review2.jpeg">
+            </div>
+            <div class="card">
+                <h2>Matthew Doe</h2>
+                <p>
+                    Wonderful.Has most books of my liking.
+                </p>
+                <div class="review_icon">
+                    <i class="star">★</i>
+                    <i class="star">★</i>
+                    <i class="star">★</i>
+                    <i class="star">★</i>
+                    <i class="emptystar">☆</i>
+                </div>
+            </div>
+        </div>
+
+        <div class="review_card">
+            <i class="quotation">❞</i>
+            <div class="card_top">
+                <img src="Images/review3.jpeg">
+            </div>
+            <div class="card">
+                <h2>Martha Doe</h2>
+                <p>
+                  Cant get enough of this website!!Its so good.
+                </p>
+                <div class="review_icon">
+                    <i class="star">★</i>
+                    <i class="star">★</i>
+                    <i class="star">★</i>
+                    <i class="star">★</i>
+                    <i class="emptystar">☆</i>
+                </div>
+            </div>
+        </div>
+
+        <div class="review_card">
+            <i class="quotation">❞</i>
+            <div class="card_top">
+                <img src="Images/review4.jpeg">
+            </div>
+            <div class="card">
+                <h2>Mary Doe</h2>
+                <p>
+                    I have read 10 books so far.Yet to read more.Good site.
+                </p>
+                <div class="review_icon">
+                    <i class="star">★</i>
+                    <i class="star">★</i>
+                    <i class="star">★</i>
+                    <i class="star">★</i>
+                    <i class="emptystar">☆</i>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+</div>
 
 
 
