--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <ul>
                 <li><a href="#Home">Home</a></li>
                 <li><a href="#About">About</a></li>
-                <li><a href="#Featured">Featured</a></li>
-                <li><a href="#Arrivals">Arrivals</a></li>
+                <li><a href="#Featured">View books</a></li>
+                <li><a href="#Arrivals">Add books</a></li>
                 <li><a href="#Reviews">Reviews</a></li>
                 <li><a href="#Blog">Blog</a></li>
             </ul>
@@ -92,7 +92,7 @@
 
     <!--About-->
 
-    <div class="about">
+    <div class="about" id="About">
 
         <div class="about_image">
             <img src="Images/About2.jpeg">
@@ -125,7 +125,7 @@
 
   <!--reviews-->
 
-  <div class="reviews">
+  <div class="reviews" id="Reviews">
     <h1>Reviews</h1>
 
     <div class="review_box">
