added db.json and js file

--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
 
     <!--Books-->
     <!-- Featured books -->
+    <div class="books">
+
+    </div>
     <!-- <div  class="featured-book">
         <h1>Featured books</h1>
         <div class="Featured-book-box">
@@ -121,7 +124,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>  -->
 
   <!--reviews-->
 
@@ -221,4 +224,5 @@
 
     
 </body>
+<script src="./index.js"></script>
 </html>
