changes to db.json and js

--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
     <!--Books-->
     <!-- Featured books -->
     <div class="books">
-
+       <ol id="list">
+          
+       </ol>
     </div>
     <!-- <div  class="featured-book">
         <h1>Featured books</h1>
