changes to js and html

--- a/index.html
+++ b/index.html
@@ -110,9 +110,16 @@
     <!--Books-->
     <!-- Featured books -->
     <div class="books">
+
        <ol id="list">
           
        </ol>
+       <div id="details">
+        <img src="" id="image"/>
+        <h2 id="title">Book title</h2>
+        <p id="author">Author name</p>
+        <p id="ISBN">ISBN no</p>
+       </div>
     </div>
     <!-- <div  class="featured-book">
         <h1>Featured books</h1>
