changes to html and js

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 
         </nav>
 
-        <div class="main">
+        <div class="main" id="Home">
 
             <div class="main_tag">
-                <h1>WELCOME TO <br><span>BOOKS AND BREWS</span></h1>
+                <h1>WELCOME TO <br><span>ODEON BOOKS</span></h1>
 
                 <p>
                    <b><i>Between the pages of a book is a lovely place to be.</i></b>
