changes to all files

--- a/index.html
+++ b/index.html
@@ -121,6 +121,16 @@
         <p id="ISBN">ISBN no</p>
        </div>
     </div>
+
+    <div class="add_books">
+        <form id="add">
+            <input type="text" placeholder="Enter book name:" id="e_bname"/>
+            <input type="text" placeholder="Enter author name:" id="e_aname"/>
+            <input type="number" placeholder="Enter ISBN number:" id="e_isbn"/>
+            <input type="text" placeholder="Enter image url:" id="e_image"/>
+            <button id="add-book">Add Book</button>
+        </form>
+    </div>
     <!-- <div  class="featured-book">
         <h1>Featured books</h1>
         <div class="Featured-book-box">
