changes to html and css

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <p>
                     <b><i>Books don't change people; paragraphs do,sometimes even sentences.</i></b>
                 </p>
-                <a href="#" class="main_btn">Learn More</a>
+                <a href="#" class="main_btn" >Welcome dear user</a> 
 
             </div>
 
@@ -103,7 +103,7 @@
             <p>
                 Greetings from our library's website! We are a community-focused library committed to offering materials and services that promote literacy, intellectual curiosity, and lifelong learning. People of all ages and backgrounds can come to our library to learn new things, have deep conversations, and access knowledge that improves their lives.We consider the library to be more than just a collection of books and other things. It is a vibrant and welcoming area where individuals may congregate, meet, and interact with one another. We are here to help you, whether you need a peaceful space to study, professional research aid, or simply want to browse the newest bestsellers.We are dedicated to creating a culture of intellectual curiosity and lifelong learning at our library. We are glad to be a part of a community that values education, diversity, and inclusion because we believe that everyone deserves access to knowledge and tools that can aid in their growth and well-being.We appreciate you coming to our website, and we hope to see you in the library soon!
             </p>
-            <a href="#" class="about_btn">Learn More</a>
+            <a href="#" class="about_btn">Scroll down for more!</a>
         </div>
 
     </div>
