changes to html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             
 
             <div class="services_card">
-                <i class="fa fa-clock-o"></i>
+                <i class="fa-solid fa-check"></i>
                 <h3>24/7 Services</h3>
                 <p>
                    The books are always available.
